✨ Added codigo_propulsion in endpoint
